isl-rs/src/val.rs

use crate::*;

extern "C" {
  pub fn isl_val_list_get_ctx(list: ValListRef) -> Option<CtxRef>;
  pub fn isl_val_list_from_val(el: Val) -> Option<ValList>;
  pub fn isl_val_list_alloc(ctx: CtxRef, n: c_int) -> Option<ValList>;
  pub fn isl_val_list_copy(list: ValListRef) -> Option<ValList>;
  pub fn isl_val_list_free(list: ValList) -> *mut c_void;
  pub fn isl_val_list_add(list: ValList, el: Val) -> Option<ValList>;
  pub fn isl_val_list_insert(list: ValList, pos: c_uint, el: Val) -> Option<ValList>;
  pub fn isl_val_list_drop(list: ValList, first: c_uint, n: c_uint) -> Option<ValList>;
  pub fn isl_val_list_concat(list1: ValList, list2: ValList) -> Option<ValList>;
  pub fn isl_val_list_n_val(list: ValListRef) -> c_int;
  pub fn isl_val_list_get_val(list: ValListRef, index: c_int) -> Option<Val>;
  pub fn isl_val_list_set_val(list: ValList, index: c_int, el: Val) -> Option<ValList>;
  pub fn isl_val_list_foreach(list: ValListRef, fn_: unsafe extern "C" fn(el: Val, user: *mut c_void) -> Stat, user: *mut c_void) -> Stat;
  pub fn isl_val_list_map(list: ValList, fn_: unsafe extern "C" fn(el: Val, user: *mut c_void) -> Option<Val>, user: *mut c_void) -> Option<ValList>;
  pub fn isl_val_list_sort(list: ValList, cmp: unsafe extern "C" fn(a: ValRef, b: ValRef, user: *mut c_void) -> c_int, user: *mut c_void) -> Option<ValList>;
  pub fn isl_val_list_foreach_scc(list: ValListRef, follows: unsafe extern "C" fn(a: ValRef, b: ValRef, user: *mut c_void) -> Bool, follows_user: *mut c_void, fn_: unsafe extern "C" fn(scc: ValList, user: *mut c_void) -> Stat, fn_user: *mut c_void) -> Stat;
  pub fn isl_printer_print_val_list(p: Printer, list: ValListRef) -> Option<Printer>;
  pub fn isl_val_list_dump(list: ValListRef) -> ();
  pub fn isl_multi_val_dim(multi: MultiValRef, type_: DimType) -> c_uint;
  pub fn isl_multi_val_get_ctx(multi: MultiValRef) -> Option<CtxRef>;
  pub fn isl_multi_val_get_space(multi: MultiValRef) -> Option<Space>;
  pub fn isl_multi_val_get_domain_space(multi: MultiValRef) -> Option<Space>;
  pub fn isl_multi_val_find_dim_by_name(multi: MultiValRef, type_: DimType, name: Option<CStr>) -> c_int;
  pub fn isl_multi_val_from_val_list(space: Space, list: ValList) -> Option<MultiVal>;
  pub fn isl_multi_val_zero(space: Space) -> Option<MultiVal>;
  pub fn isl_multi_val_copy(multi: MultiValRef) -> Option<MultiVal>;
  pub fn isl_multi_val_free(multi: MultiVal) -> *mut c_void;
  pub fn isl_multi_val_plain_is_equal(multi1: MultiValRef, multi2: MultiValRef) -> Bool;
  pub fn isl_multi_val_involves_nan(multi: MultiValRef) -> Bool;
  pub fn isl_multi_val_find_dim_by_id(multi: MultiValRef, type_: DimType, id: IdRef) -> c_int;
  pub fn isl_multi_val_get_dim_id(multi: MultiValRef, type_: DimType, pos: c_uint) -> Option<Id>;
  pub fn isl_multi_val_set_dim_name(multi: MultiVal, type_: DimType, pos: c_uint, s: Option<CStr>) -> Option<MultiVal>;
  pub fn isl_multi_val_set_dim_id(multi: MultiVal, type_: DimType, pos: c_uint, id: Id) -> Option<MultiVal>;
  pub fn isl_multi_val_get_tuple_name(multi: MultiValRef, type_: DimType) -> Option<CStr>;
  pub fn isl_multi_val_has_tuple_id(multi: MultiValRef, type_: DimType) -> Bool;
  pub fn isl_multi_val_get_tuple_id(multi: MultiValRef, type_: DimType) -> Option<Id>;
  pub fn isl_multi_val_set_tuple_name(multi: MultiVal, type_: DimType, s: Option<CStr>) -> Option<MultiVal>;
  pub fn isl_multi_val_set_tuple_id(multi: MultiVal, type_: DimType, id: Id) -> Option<MultiVal>;
  pub fn isl_multi_val_reset_tuple_id(multi: MultiVal, type_: DimType) -> Option<MultiVal>;
  pub fn isl_multi_val_reset_user(multi: MultiVal) -> Option<MultiVal>;
  pub fn isl_multi_val_drop_dims(multi: MultiVal, type_: DimType, first: c_uint, n: c_uint) -> Option<MultiVal>;
  pub fn isl_multi_val_get_val(multi: MultiValRef, pos: c_int) -> Option<Val>;
  pub fn isl_multi_val_set_val(multi: MultiVal, pos: c_int, el: Val) -> Option<MultiVal>;
  pub fn isl_multi_val_range_splice(multi1: MultiVal, pos: c_uint, multi2: MultiVal) -> Option<MultiVal>;
  pub fn isl_multi_val_flatten_range(multi: MultiVal) -> Option<MultiVal>;
  pub fn isl_multi_val_flat_range_product(multi1: MultiVal, multi2: MultiVal) -> Option<MultiVal>;
  pub fn isl_multi_val_range_product(multi1: MultiVal, multi2: MultiVal) -> Option<MultiVal>;
  pub fn isl_multi_val_factor_range(multi: MultiVal) -> Option<MultiVal>;
  pub fn isl_multi_val_range_is_wrapping(multi: MultiValRef) -> Bool;
  pub fn isl_multi_val_range_factor_domain(multi: MultiVal) -> Option<MultiVal>;
  pub fn isl_multi_val_range_factor_range(multi: MultiVal) -> Option<MultiVal>;
  pub fn isl_multi_val_scale_val(multi: MultiVal, v: Val) -> Option<MultiVal>;
  pub fn isl_multi_val_scale_down_val(multi: MultiVal, v: Val) -> Option<MultiVal>;
  pub fn isl_multi_val_scale_multi_val(multi: MultiVal, mv: MultiVal) -> Option<MultiVal>;
  pub fn isl_multi_val_scale_down_multi_val(multi: MultiVal, mv: MultiVal) -> Option<MultiVal>;
  pub fn isl_multi_val_mod_multi_val(multi: MultiVal, mv: MultiVal) -> Option<MultiVal>;
  pub fn isl_multi_val_add(multi1: MultiVal, multi2: MultiVal) -> Option<MultiVal>;
  pub fn isl_multi_val_sub(multi1: MultiVal, multi2: MultiVal) -> Option<MultiVal>;
  pub fn isl_multi_val_align_params(multi: MultiVal, model: Space) -> Option<MultiVal>;
  pub fn isl_multi_val_from_range(multi: MultiVal) -> Option<MultiVal>;
  pub fn isl_multi_val_neg(multi: MultiVal) -> Option<MultiVal>;
  pub fn isl_multi_val_involves_dims(multi: MultiValRef, type_: DimType, first: c_uint, n: c_uint) -> Bool;
  pub fn isl_multi_val_insert_dims(multi: MultiVal, type_: DimType, first: c_uint, n: c_uint) -> Option<MultiVal>;
  pub fn isl_multi_val_add_dims(multi: MultiVal, type_: DimType, n: c_uint) -> Option<MultiVal>;
  pub fn isl_multi_val_project_domain_on_params(multi: MultiVal) -> Option<MultiVal>;
  pub fn isl_multi_val_product(multi1: MultiVal, multi2: MultiVal) -> Option<MultiVal>;
  pub fn isl_multi_val_splice(multi1: MultiVal, in_pos: c_uint, out_pos: c_uint, multi2: MultiVal) -> Option<MultiVal>;
  pub fn isl_val_zero(ctx: CtxRef) -> Option<Val>;
  pub fn isl_val_one(ctx: CtxRef) -> Option<Val>;
  pub fn isl_val_negone(ctx: CtxRef) -> Option<Val>;
  pub fn isl_val_nan(ctx: CtxRef) -> Option<Val>;
  pub fn isl_val_infty(ctx: CtxRef) -> Option<Val>;
  pub fn isl_val_neginfty(ctx: CtxRef) -> Option<Val>;
  pub fn isl_val_int_from_si(ctx: CtxRef, i: c_long) -> Option<Val>;
  pub fn isl_val_int_from_ui(ctx: CtxRef, u: c_ulong) -> Option<Val>;
  pub fn isl_val_int_from_chunks(ctx: CtxRef, n: c_int, size: c_int, chunks: *mut c_void) -> Option<Val>;
  pub fn isl_val_copy(v: ValRef) -> Option<Val>;
  pub fn isl_val_free(v: Val) -> *mut c_void;
  pub fn isl_val_get_ctx(val: ValRef) -> Option<CtxRef>;
  pub fn isl_val_get_hash(val: ValRef) -> c_uint;
  pub fn isl_val_get_num_si(v: ValRef) -> c_long;
  pub fn isl_val_get_den_si(v: ValRef) -> c_long;
  pub fn isl_val_get_den_val(v: ValRef) -> Option<Val>;
  pub fn isl_val_get_d(v: ValRef) -> c_double;
  pub fn isl_val_n_abs_num_chunks(v: ValRef, size: c_int) -> c_int;
  pub fn isl_val_get_abs_num_chunks(v: ValRef, size: c_int, chunks: *mut c_void) -> c_int;
  pub fn isl_val_set_si(v: Val, i: c_long) -> Option<Val>;
  pub fn isl_val_abs(v: Val) -> Option<Val>;
  pub fn isl_val_neg(v: Val) -> Option<Val>;
  pub fn isl_val_inv(v: Val) -> Option<Val>;
  pub fn isl_val_floor(v: Val) -> Option<Val>;
  pub fn isl_val_ceil(v: Val) -> Option<Val>;
  pub fn isl_val_trunc(v: Val) -> Option<Val>;
  pub fn isl_val_2exp(v: Val) -> Option<Val>;
  pub fn isl_val_min(v1: Val, v2: Val) -> Option<Val>;
  pub fn isl_val_max(v1: Val, v2: Val) -> Option<Val>;
  pub fn isl_val_add(v1: Val, v2: Val) -> Option<Val>;
  pub fn isl_val_add_ui(v1: Val, v2: c_ulong) -> Option<Val>;
  pub fn isl_val_sub(v1: Val, v2: Val) -> Option<Val>;
  pub fn isl_val_sub_ui(v1: Val, v2: c_ulong) -> Option<Val>;
  pub fn isl_val_mul(v1: Val, v2: Val) -> Option<Val>;
  pub fn isl_val_mul_ui(v1: Val, v2: c_ulong) -> Option<Val>;
  pub fn isl_val_div(v1: Val, v2: Val) -> Option<Val>;
  pub fn isl_val_div_ui(v1: Val, v2: c_ulong) -> Option<Val>;
  pub fn isl_val_mod(v1: Val, v2: Val) -> Option<Val>;
  pub fn isl_val_gcd(v1: Val, v2: Val) -> Option<Val>;
  pub fn isl_val_gcdext(v1: Val, v2: Val, x: *mut Val, y: *mut Val) -> Option<Val>;
  pub fn isl_val_sgn(v: ValRef) -> c_int;
  pub fn isl_val_is_zero(v: ValRef) -> Bool;
  pub fn isl_val_is_one(v: ValRef) -> Bool;
  pub fn isl_val_is_negone(v: ValRef) -> Bool;
  pub fn isl_val_is_nonneg(v: ValRef) -> Bool;
  pub fn isl_val_is_nonpos(v: ValRef) -> Bool;
  pub fn isl_val_is_pos(v: ValRef) -> Bool;
  pub fn isl_val_is_neg(v: ValRef) -> Bool;
  pub fn isl_val_is_int(v: ValRef) -> Bool;
  pub fn isl_val_is_rat(v: ValRef) -> Bool;
  pub fn isl_val_is_nan(v: ValRef) -> Bool;
  pub fn isl_val_is_infty(v: ValRef) -> Bool;
  pub fn isl_val_is_neginfty(v: ValRef) -> Bool;
  pub fn isl_val_cmp_si(v: ValRef, i: c_long) -> c_int;
  pub fn isl_val_lt(v1: ValRef, v2: ValRef) -> Bool;
  pub fn isl_val_le(v1: ValRef, v2: ValRef) -> Bool;
  pub fn isl_val_gt(v1: ValRef, v2: ValRef) -> Bool;
  pub fn isl_val_ge(v1: ValRef, v2: ValRef) -> Bool;
  pub fn isl_val_eq(v1: ValRef, v2: ValRef) -> Bool;
  pub fn isl_val_ne(v1: ValRef, v2: ValRef) -> Bool;
  pub fn isl_val_abs_eq(v1: ValRef, v2: ValRef) -> Bool;
  pub fn isl_val_is_divisible_by(v1: ValRef, v2: ValRef) -> Bool;
  pub fn isl_val_read_from_str(ctx: CtxRef, str: Option<CStr>) -> Option<Val>;
  pub fn isl_printer_print_val(p: Printer, v: ValRef) -> Option<Printer>;
  pub fn isl_val_dump(v: ValRef) -> ();
  pub fn isl_val_to_str(v: ValRef) -> Option<CString>;
  pub fn isl_multi_val_add_val(mv: MultiVal, v: Val) -> Option<MultiVal>;
  pub fn isl_multi_val_mod_val(mv: MultiVal, v: Val) -> Option<MultiVal>;
  pub fn isl_multi_val_read_from_str(ctx: CtxRef, str: Option<CStr>) -> Option<MultiVal>;
  pub fn isl_printer_print_multi_val(p: Printer, mv: MultiValRef) -> Option<Printer>;
  pub fn isl_multi_val_dump(mv: MultiValRef) -> ();
  pub fn isl_multi_val_to_str(mv: MultiValRef) -> Option<CString>;
}

#[repr(transparent)]
#[derive(Debug)]
pub struct Val(pub NonNull<c_void>);

#[repr(transparent)]
#[derive(Debug, Clone, Copy, Ord, PartialOrd, Eq, PartialEq, Hash)]
pub struct ValRef(pub NonNull<c_void>);

impl_try!(Val);
impl_try!(ValRef);

impl Val {
  #[inline(always)]
  pub fn read(&self) -> Val { unsafe { ptr::read(self) } }
  #[inline(always)]
  pub fn write(&self, x: Val) { unsafe { ptr::write(self as *const _ as _, x) } }
}

impl AsRef<ValRef> for Val {
  #[inline(always)]
  fn as_ref(&self) -> &ValRef { unsafe { mem::transmute(self) } }
}

impl Deref for Val {
  type Target = ValRef;
  #[inline(always)]
  fn deref(&self) -> &ValRef { self.as_ref() }
}

impl To<Option<Val>> for *mut c_void {
  #[inline(always)]
  unsafe fn to(self) -> Option<Val> { NonNull::new(self).map(Val) }
}

#[repr(transparent)]
#[derive(Debug)]
pub struct ValList(pub NonNull<c_void>);

#[repr(transparent)]
#[derive(Debug, Clone, Copy, Ord, PartialOrd, Eq, PartialEq, Hash)]
pub struct ValListRef(pub NonNull<c_void>);

impl_try!(ValList);
impl_try!(ValListRef);

impl ValList {
  #[inline(always)]
  pub fn read(&self) -> ValList { unsafe { ptr::read(self) } }
  #[inline(always)]
  pub fn write(&self, x: ValList) { unsafe { ptr::write(self as *const _ as _, x) } }
}

impl AsRef<ValListRef> for ValList {
  #[inline(always)]
  fn as_ref(&self) -> &ValListRef { unsafe { mem::transmute(self) } }
}

impl Deref for ValList {
  type Target = ValListRef;
  #[inline(always)]
  fn deref(&self) -> &ValListRef { self.as_ref() }
}

impl To<Option<ValList>> for *mut c_void {
  #[inline(always)]
  unsafe fn to(self) -> Option<ValList> { NonNull::new(self).map(ValList) }
}

#[repr(transparent)]
#[derive(Debug)]
pub struct MultiVal(pub NonNull<c_void>);

#[repr(transparent)]
#[derive(Debug, Clone, Copy, Ord, PartialOrd, Eq, PartialEq, Hash)]
pub struct MultiValRef(pub NonNull<c_void>);
